kathara (__VERSION__-__DEBIAN_PACKAGE_VERSION____UBUNTU_VERSION__) __UBUNTU_VERSION__; urgency=low

  * Minor fix for lab.ext

 -- Mariano Scazzariello <******@gmail.com>  __DATE__