@@ -1,5 +1,8 @@
 kathara (__VERSION__-__DEBIAN_PACKAGE_VERSION____UBUNTU_VERSION__) __UBUNTU_VERSION__; urgency=low
 
-  * Minor fix for lab.ext
+  * Fix Windows Connect
+  * Add custom machine sysctls
+  * Add lconfig command
+  * Fix machine binary files copy
 
  -- Mariano Scazzariello <******@gmail.com>  __DATE__
